[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scalesc"                   
version = "0.1.0"           
description = "A GPU-accelerated tool for single-cell RNAseq analysis of extremely large dataset."
keywords = [ "single cell", "GPU" ]
readme = "README.md"                   
authors = [
            { name = "Haotian Zhang", email = "haotianzh@uconn.edu" }, 
            { name = "Wenxing Hu", email = "wenxing.hu@biogen.com" },
            ]
license = { file = "LICENSE" }         
requires-python = ">=3.10" 
dependencies = [
    "rapids-singlecell"
]

[project.urls]
"Homepage" = "https://github.com/interactivereport/scaleSC/tree/main"  

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
